parcel/mongo-deployement.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gestion-colis-mongo
  namespace: parcel-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gestion-colis-mongo
  template:
    metadata:
      labels:
        app: gestion-colis-mongo
    spec:
      containers:
        - name: mongo
          image: mongo:8-noble
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: parcel-ns
spec:
  selector:
    app: gestion-colis-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
  clusterIP: None
