parcel/ingress-app-certificate.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gestion-colis-ingress
  namespace: parcel-ns
spec:
  rules:
  - host: parcel.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gestion-colis-app
            port:
              number: 5000
